fix: Fix broken maven profile for intgr. test on jdk 11
Issue:[DHIS2-9608]
Signed-off-by: Morten Svanaes <msvanaes@dhis2.org>