@@ -134,6 +134,7 @@
   <profiles>
 
     <profile>
+      <!-- JDK 9+ -->
       <id>default</id>
       <activation>
         <activeByDefault>true</activeByDefault>
@@ -164,11 +165,70 @@
       </build>
     </profile>
 
+    <profile>
+      <id>default_jdk8</id>
+      <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven-surefire-plugin.version}</version>
+            <configuration>
+              <trimStackTrace>false</trimStackTrace>
+              <argLine>-Xmx1024m --illegal-access=permit</argLine>
+              <excludedGroups>org.hisp.dhis.IntegrationTest</excludedGroups>
+            </configuration>
+            <dependencies>
+              <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm</artifactId>
+                <version>${ow2.asm.version}</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
     <!-- Integration test profile -->
     <profile>
+      <!-- JDK 9+ -->
       <id>integration</id>
       <properties>
         <maven.compiler.release>8</maven.compiler.release>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven-surefire-plugin.version}</version>
+            <configuration>
+              <trimStackTrace>false</trimStackTrace>
+              <argLine>-Xmx1024m --illegal-access=permit</argLine>
+              <groups>org.hisp.dhis.IntegrationTest</groups>
+            </configuration>
+            <dependencies>
+              <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm</artifactId>
+                <version>${ow2.asm.version}</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>integration_jdk8</id>
+      <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
       </properties>
       <build>
         <plugins>
@@ -243,6 +303,7 @@
     </profile>
 
     <profile>
+      <!-- JDK 9+ -->
       <id>dev</id>
       <properties>
         <maven.compiler.release>8</maven.compiler.release>
@@ -287,6 +348,54 @@
         </plugins>
       </build>
     </profile>
+
+    <profile>
+      <id>dev_jdk8</id>
+      <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven-surefire-plugin.version}</version>
+            <configuration>
+              <skipTests>true</skipTests>
+              <trimStackTrace>false</trimStackTrace>
+              <argLine>-Xmx1024m --illegal-access=permit</argLine>
+              <excludedGroups>org.hisp.dhis.IntegrationTest</excludedGroups>
+            </configuration>
+            <dependencies>
+              <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm</artifactId>
+                <version>${ow2.asm.version}</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+
+          <plugin>
+            <groupId>org.zeroturnaround</groupId>
+            <artifactId>jrebel-maven-plugin</artifactId>
+            <version>1.1.6</version>
+            <executions>
+              <execution>
+                <configuration>
+                </configuration>
+                <id>generate-rebel-xml</id>
+                <phase>process-resources</phase>
+                <goals>
+                  <goal>generate</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
   </profiles>
 
   <build>
